delete jobs, cleanup in classes