@@ -18,51 +18,41 @@
 
 package org.apache.wayang.ml.encoding;
 
-import java.util.List;
-import java.util.Map;
-import java.util.PriorityQueue;
-import java.util.Queue;
-import java.util.Set;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
-import java.util.HashSet;
 import java.util.LinkedList;
-import java.util.stream.Collectors;
+import java.util.List;
+import java.util.Map;
+import java.util.Queue;
+import java.util.Set;
 import java.util.stream.Stream;
 
-import org.apache.wayang.core.api.WayangContext;
-import org.apache.wayang.core.api.Configuration;
-import org.apache.wayang.core.plan.wayangplan.ElementaryOperator;
-import org.apache.wayang.core.plan.wayangplan.ExecutionOperator;
-import org.apache.wayang.core.plan.wayangplan.InputSlot;
+import org.apache.wayang.core.api.exception.WayangException;
+import org.apache.wayang.core.optimizer.enumeration.PlanImplementation;
 import org.apache.wayang.core.plan.executionplan.Channel;
 import org.apache.wayang.core.plan.executionplan.ExecutionPlan;
 import org.apache.wayang.core.plan.executionplan.ExecutionTask;
-import org.apache.wayang.core.plan.wayangplan.WayangPlan;
-import org.apache.wayang.core.platform.Junction;
-import org.apache.wayang.core.plan.wayangplan.PlanTraversal;
+import org.apache.wayang.core.plan.wayangplan.ExecutionOperator;
+import org.apache.wayang.core.plan.wayangplan.InputSlot;
 import org.apache.wayang.core.plan.wayangplan.Operator;
 import org.apache.wayang.core.plan.wayangplan.OperatorAlternative;
 import org.apache.wayang.core.plan.wayangplan.OutputSlot;
-import org.apache.wayang.core.optimizer.enumeration.PlanImplementation;
-import org.apache.wayang.core.api.exception.WayangException;
+import org.apache.wayang.core.plan.wayangplan.WayangPlan;
+import org.apache.wayang.core.platform.Junction;
 
 public class TreeEncoder implements Encoder {
-    public static TreeNode encode(PlanImplementation plan) {
-        List<TreeNode> result = new ArrayList<TreeNode>();
+    public static TreeNode encode(final PlanImplementation plan) {
+        final List<TreeNode> result = new ArrayList<TreeNode>();
 
-        OneHotMappings.setOptimizationContext(plan.getOptimizationContext());
+        final HashMap<Operator, Collection<Operator>> tree = new HashMap<>();
+        final List<ExecutionOperator> sinks = plan.getOperators().stream().filter(Operator::isSink)
+                .toList();
 
-        HashMap<Operator, Collection<Operator>> tree = new HashMap<>();
-        Collection<Operator> sinks = plan.getOperators().stream()
-                .filter(Operator::isSink).collect(Collectors.toList());
+        final Map<OutputSlot<?>, Junction> junctions = plan.getJunctions();
 
-        Map<OutputSlot<?>, Junction> junctions = plan.getJunctions();
-
-        for (Operator sink : sinks) {
-            TreeNode sinkNode = traversePIOperator(sink, junctions, tree);
+        for (final Operator sink : sinks) {
+            final TreeNode sinkNode = traversePIOperator(sink, junctions, tree);
             result.add(sinkNode);
         }
 
@@ -70,21 +60,21 @@ public class TreeEncoder implements Encoder {
             return null;
         }
 
-        TreeNode resultNode = result.get(0);
-        resultNode.rebalance();
+        final TreeNode resultNode = result.get(0);
+        // resultNode.rebalance();
 
         return resultNode;
     }
 
-    public static TreeNode encode(WayangPlan plan) {
-        List<TreeNode> result = new ArrayList<TreeNode>();
+    public static TreeNode encode(final WayangPlan plan) {
+        final List<TreeNode> result = new ArrayList<TreeNode>();
         plan.prune();
 
-        HashMap<Operator, Collection<Operator>> tree = new HashMap<>();
-        Collection<Operator> sinks = plan.getSinks();
+        final HashMap<Operator, Collection<Operator>> tree = new HashMap<>();
+        final Collection<Operator> sinks = plan.getSinks();
 
-        for (Operator sink : sinks) {
-            TreeNode sinkNode = traverse(sink, tree);
+        for (final Operator sink : sinks) {
+            final TreeNode sinkNode = traverse(sink, tree);
             result.add(sinkNode);
         }
 
@@ -92,24 +82,24 @@ public class TreeEncoder implements Encoder {
             return null;
         }
 
-        TreeNode resultNode = result.get(0);
+        final TreeNode resultNode = result.get(0);
 
-        //rebalance to make it a guaranteed binary tree
-        resultNode.rebalance();
+        // rebalance to make it a guaranteed binary tree
+        // resultNode.rebalance();
 
         return resultNode;
     }
 
-    public static TreeNode encode(ExecutionPlan plan, boolean ignoreConversions) {
-        List<TreeNode> result = new ArrayList<TreeNode>();
-        HashMap<Operator, Collection<ExecutionTask>> tree = new HashMap<>();
-        Set<ExecutionTask> tasks = plan.collectAllTasks();
+    public static TreeNode encode(final ExecutionPlan plan, final boolean ignoreConversions) {
+        final List<TreeNode> result = new ArrayList<TreeNode>();
+        final HashMap<Operator, Collection<ExecutionTask>> tree = new HashMap<>();
+        final Set<ExecutionTask> tasks = plan.collectAllTasks();
 
-        Collection<ExecutionTask> sinks = tasks.stream()
-                .filter(task -> task.getOperator().isSink()).collect(Collectors.toList());
+        final Collection<ExecutionTask> sinks = tasks.stream().filter(task -> task.getOperator().isSink())
+                .toList();
 
-        for (ExecutionTask sink : sinks) {
-            TreeNode sinkNode = traverse(sink, tree, ignoreConversions);
+        for (final ExecutionTask sink : sinks) {
+            final TreeNode sinkNode = traverse(sink, tree, ignoreConversions);
             result.add(sinkNode);
         }
 
@@ -117,31 +107,25 @@ public class TreeEncoder implements Encoder {
             return null;
         }
 
-        TreeNode resultNode = result.get(0);
+        final TreeNode resultNode = result.get(0);
 
-        resultNode.rebalance();
+        // resultNode.rebalance();
 
         return resultNode;
     }
 
-    private static TreeNode traversePIOperator(
-            Operator current,
-            Map<OutputSlot<?>, Junction> junctions,
-            HashMap<Operator, Collection<Operator>> visited) {
+    private static TreeNode traversePIOperator(final Operator current, final Map<OutputSlot<?>, Junction> junctions,
+            final HashMap<Operator, Collection<Operator>> visited) {
         if (visited.containsKey(current)) {
             return null;
         }
 
-        TreeNode currentNode = new TreeNode();
+        final TreeNode currentNode = new TreeNode();
 
         if (current.isAlternative()) {
-            Operator original = ((OperatorAlternative) current)
-                .getAlternatives()
-                .get(0)
-                .getContainedOperators()
-                .stream()
-                .findFirst()
-                .orElseThrow(() -> new WayangException("Operator could not be retrieved from Alternatives"));
+            final Operator original = ((OperatorAlternative) current).getAlternatives().get(0).getContainedOperators()
+                    .stream().findFirst()
+                    .orElseThrow(() -> new WayangException("Operator could not be retrieved from Alternatives"));
             OneHotMappings.addOriginalOperator(original);
 
             currentNode.encoded = OneHotEncoder.encodeOperator(original);
@@ -155,32 +139,28 @@ public class TreeEncoder implements Encoder {
             }
         }
 
-        Collection<Junction> currentJunctions = junctions.values().stream()
-            .filter(junction -> {
-                for (InputSlot<?> input : current.getAllInputs()) {
-                    if (junction.getTargetInputs().contains(input)) {
-                        return true;
-                    }
+        final Collection<Junction> currentJunctions = junctions.values().stream().filter(junction -> {
+            for (final InputSlot<?> input : current.getAllInputs()) {
+                if (junction.getTargetInputs().contains(input)) {
+                    return true;
                 }
+            }
 
-                return false;
-            }).collect(Collectors.toList());
+            return false;
+        }).toList();
 
-        Collection<ExecutionOperator> inputs = currentJunctions.stream()
-            .map(junction -> junction.getSourceOperator())
-            .collect(Collectors.toList());
+        final Collection<ExecutionOperator> inputs = currentJunctions.stream()
+                .map(Junction::getSourceOperator).toList();
 
         for (final Operator input : inputs) {
-
             TreeNode next;
-            Collection<ExecutionTask> conversions = currentJunctions.stream()
-                .filter(junction -> junction.getSourceOperator() == input)
-                .flatMap(junction -> junction.getConversionTasks().stream())
-                .collect(Collectors.toList());
+            final Collection<ExecutionTask> conversions = currentJunctions.stream()
+                    .filter(junction -> junction.getSourceOperator() == input)
+                    .flatMap(junction -> junction.getConversionTasks().stream()).toList();
 
-            // Need to fit conversions in between current and its inputs
+            // fit conversions in between current and its inputs
             if (conversions.size() > 0) {
-                Queue<ExecutionTask> conversionQueue = new LinkedList<>();
+                final Queue<ExecutionTask> conversionQueue = new LinkedList<>();
                 conversionQueue.addAll(conversions);
 
                 next = traverseWithNext(conversionQueue, junctions, visited, input);
@@ -198,12 +178,9 @@ public class TreeEncoder implements Encoder {
         return currentNode;
     }
 
-    private static TreeNode traverseWithNext(
-        Queue<ExecutionTask> conversions,
-        Map<OutputSlot<?>, Junction> junctions,
-        HashMap<Operator, Collection<Operator>> visited,
-        Operator next
-    ){
+    private static TreeNode traverseWithNext(final Queue<ExecutionTask> conversions,
+            final Map<OutputSlot<?>, Junction> junctions, final HashMap<Operator, Collection<Operator>> visited,
+            final Operator next) {
         if (visited.containsKey(next)) {
             return null;
         }
@@ -212,18 +189,14 @@ public class TreeEncoder implements Encoder {
             return traversePIOperator(next, junctions, visited);
         }
 
-        ExecutionTask currentTask = conversions.poll();
-        ExecutionOperator current = currentTask.getOperator();
-        TreeNode currentNode = new TreeNode();
+        final ExecutionTask currentTask = conversions.poll();
+        final ExecutionOperator current = currentTask.getOperator();
+        final TreeNode currentNode = new TreeNode();
 
         if (current.isAlternative()) {
-            Operator original = ((OperatorAlternative) current)
-                .getAlternatives()
-                .get(0)
-                .getContainedOperators()
-                .stream()
-                .findFirst()
-                .orElseThrow(() -> new WayangException("Operator could not be retrieved from Alternatives"));
+            final Operator original = ((OperatorAlternative) current).getAlternatives().get(0).getContainedOperators()
+                    .stream().findFirst()
+                    .orElseThrow(() -> new WayangException("Operator could not be retrieved from Alternatives"));
             OneHotMappings.addOriginalOperator(original);
 
             currentNode.encoded = OneHotEncoder.encodeOperator(original);
@@ -239,7 +212,7 @@ public class TreeEncoder implements Encoder {
             }
         }
 
-        TreeNode nextNode = traverseWithNext(conversions, junctions, visited, next);
+        final TreeNode nextNode = traverseWithNext(conversions, junctions, visited, next);
 
         if (currentNode.left == null) {
             currentNode.left = nextNode;
@@ -250,21 +223,17 @@ public class TreeEncoder implements Encoder {
         return currentNode;
     }
 
-    private static TreeNode traverse(Operator current, HashMap<Operator, Collection<Operator>> visited) {
+    private static TreeNode traverse(final Operator current, final HashMap<Operator, Collection<Operator>> visited) {
         if (visited.containsKey(current)) {
             return null;
         }
 
-        TreeNode currentNode = new TreeNode();
+        final TreeNode currentNode = new TreeNode();
 
         if (current.isAlternative()) {
-            Operator original = ((OperatorAlternative) current)
-                .getAlternatives()
-                .get(0)
-                .getContainedOperators()
-                .stream()
-                .findFirst()
-                .orElseThrow(() -> new WayangException("Operator could not be retrieved from Alternatives"));
+            final Operator original = ((OperatorAlternative) current).getAlternatives().get(0).getContainedOperators()
+                    .stream().findFirst()
+                    .orElseThrow(() -> new WayangException("Operator could not be retrieved from Alternatives"));
             OneHotMappings.addOriginalOperator(original);
 
             currentNode.encoded = OneHotEncoder.encodeOperator(original);
@@ -281,22 +250,11 @@ public class TreeEncoder implements Encoder {
         }
 
         // Add for later reconstruction in TreeDecoder
-        List<Operator> inputs = Stream.of(current.getAllInputs())
-                .filter(input -> input.getOccupant() != null)
-                .map(input -> input.getOccupant().getOwner()).collect(Collectors.toList());
+        final List<Operator> inputs = Stream.of(current.getAllInputs()).filter(input -> input.getOccupant() != null)
+                .map(input -> input.getOccupant().getOwner()).toList();
 
-        /*
-        Collection<Operator> outputs = Stream.of(current.getAllOutputs())
-            .flatMap(output -> {
-                return output
-                    .getOccupiedSlots()
-                    .stream()
-                    .map(input -> input.getOwner());
-            })
-            .collect(Collectors.toList());*/
-
-        for (Operator input : inputs) {
-            TreeNode next = traverse(input, visited);
+        for (final Operator input : inputs) {
+            final TreeNode next = traverse(input, visited);
 
             if (currentNode.getLeft() == null) {
                 currentNode.left = next;
@@ -308,21 +266,23 @@ public class TreeEncoder implements Encoder {
         return currentNode;
     }
 
-    private static TreeNode traverse(ExecutionTask current, HashMap<Operator, Collection<ExecutionTask>> visited, boolean ignoreConversions) {
-        if (visited.containsKey(current)) {
+    private static TreeNode traverse(final ExecutionTask current,
+            final HashMap<Operator, Collection<ExecutionTask>> visited, final boolean ignoreConversions) {
+        System.out.println("running something uncertain");
+        if (visited.containsKey(current.getOperator())) {
             return null;
         }
 
-        Collection<ExecutionTask> producers = Stream.of(current.getInputChannels())
-                .map(Channel::getProducer).collect(Collectors.toList());
+        final Collection<ExecutionTask> producers = Stream.of(current.getInputChannels()).map(Channel::getProducer)
+                .toList();
 
-        ExecutionOperator operator = current.getOperator();
-        TreeNode currentNode = new TreeNode();
+        final ExecutionOperator operator = current.getOperator();
+        final TreeNode currentNode = new TreeNode();
         currentNode.encoded = OneHotEncoder.encodeOperator(operator);
         currentNode.operator = operator;
 
-        for (ExecutionTask producer : producers) {
-            TreeNode next = traverse(producer, visited, ignoreConversions);
+        for (final ExecutionTask producer : producers) {
+            final TreeNode next = traverse(producer, visited, ignoreConversions);
 
             if (operator.isConversion() && ignoreConversions) {
                 return next;
